# armada

./: .gitignore  README.md  catalog-info.yaml  pyproject.toml
.github/copilot/: README.md  shared-instructions.md
.github/labels/: labels.yml
.github/workflows/: build_and_publish_docker_image_to_container_registry.yml  compile_python_requirements_and_create_pr.yml  database_update_orchestration.yml  lint_frontend_package.yml  lint_frontend_package_pnpm.yml  mark_issues_and_prs_as_stale.yml  migration_actions.yml  migration_checks.yml  notify_migrations_on_pr.yml  npm_dependency_update_and_create_pr.yml  pnpm_dependency_update_and_create_pr.yml  run_alembic_migrations.yml  run_dotnet_migrations.yml  run_integration_tests.yml  synchronize_labels.yml  test_and_lint_dotnet_package.yml  test_and_lint_frontend_package.yml  test_and_lint_python_package.yml  trivy.yml  trivy_config_scan.yml  update_kubernetes_deployment.yml  validate_dotnet_migrations_against_temp_db.yml  verify_migrations.yml
robotics_integration_tests/: armada.py  conftest.py  requirements.txt  test_multiple_robots_parallel_missions.py  test_simple_mission_is_successful.py  test_simple_mission_is_successfull.py  test_simple_mission_is_unsuccessful.py  test_simple_mission_pausing_and_resuming_successful.py
robotics_integration_tests/custom_containers/: azurite.py  flotilla_backend.py  isar.py  migrations_runner.py  mosquitto.py  postgres.py  sara.py  stream_logging_docker_container.py  teams_webhook_receiver.py
robotics_integration_tests/settings/: settings.py
scripts/: sync-copilot.sh
(+12 files in other folders)
